...
	func showResult(quiz result: QuizResultsViewModel) {
		let message = quizResultPresenter.makeResultsMessage()
		let model = AlertModel(
			title: result.title,
			message: message,
			buttonText: result.buttonText,
			alertIdentifier: "Game results") { [weak self] in
			guard let self = self else {return}
			self.quizResultPresenter.restartGame()
				self.presenter.correctAnswers = 0
				self.presenter.restartGame()
		}
		alertPresenter.show(in: self, model: model)
...
